cmake_minimum_required(VERSION 3.8)
project(Binkbik)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        main.cpp
        state/Machine.cpp
        state/Machine.h
        state/State.cpp
        state/State.h 
        state/Menu.h
        state/Menu.cpp
        state/Game.h
        state/Game.cpp
        state/Loading.h
        state/StartScreen.cpp
        state/StartScreen.h
        state/GameOver.cpp
        state/GameOver.h
        state/MainMenu.cpp
        state/MainMenu.h
        state/Options.cpp
        state/Options.h
        state/EndGame.cpp
        state/EndGame.h
        entities/EntityCollection.h
        entities/EntityCollection.cpp
        entities/Entity.h
        entities/Spaceship.cpp
        entities/Spaceship.h
        entities/Asteroid.cpp
        entities/Asteroid.h
        entities/Planet.cpp
        entities/Planet.h
        entities/Enemy.cpp
        entities/Enemy.h
        entities/Beam.cpp
        entities/Beam.h
        entities/Spacestation.cpp
        entities/Spacestation.h
        entities/GasCloud.cpp
        entities/GasCloud.h
        entities/Spacerock.cpp
        entities/Spacerock.h
        entities/RockBeltGenerator.h
        entities/Shield.cpp
        entities/Shield.h
        entities/AnimatedSprite.cpp
        entities/AnimatedSprite.h
        gui/FuelBar.cpp
        gui/FuelBar.h
        gui/Inventory.cpp
        gui/Inventory.h
        gui/HealthBar.cpp
        gui/HealthBar.h
        gui/PopupText.cpp
        gui/PopupText.h
        gui/Compass.cpp
        gui/Compass.h
        gui/Vignette.cpp
        gui/Vignette.h
        state/nestedStates/Pause.cpp
        state/nestedStates/Pause.h
        state/nestedStates/NestedMachine.cpp
        state/nestedStates/NestedMachine.h
        state/nestedStates/NestedState.h
        state/nestedStates/Store.cpp
        state/nestedStates/Store.h
        state/nestedStates/PlanetView.cpp
        state/nestedStates/PlanetView.h
        Collision.cpp
        Collision.h
        ResourceLoader.h
        ResourceLoader.cpp
        SoundEffect.cpp
        SoundEffect.h
        ParticleEmitter.h
        GameSave.h
        GameSaveHandler.cpp
        GameSaveHandler.h
        entities/Missile.cpp
        entities/Missile.h
        entities/GuidedMissile.cpp
        entities/GuidedMissile.h
        gui/EnergyBar.cpp
        gui/EnergyBar.h
        )

add_executable(Binkbik ${SOURCE_FILES})
target_link_libraries(Binkbik sfml-graphics sfml-audio sfml-window sfml-system)
target_include_directories(Binkbik PUBLIC . plog/include cereal/include)